tests/suite/snapshots/suite__check__tests__check__bad-primitive2.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-primitive2.xi:2:5]
   │
 2 │     x:bool = 1
   ·     ───┬──  
   ·        ╰──── Expected bool but found int
───╯

